--- a/src/app/i18n/locales/zh-CN/pricing-enterprise-features.json
+++ b/src/app/i18n/locales/zh-CN/pricing-enterprise-features.json
@@ -1,6 +1,6 @@
 {
-    "Basic": "团队版",
-    "Advanced": "企业版",
+    "Basic": "基础功能",
+    "Advanced": "高级功能",
     "ValueAddedServices": "增值服务",
     "aiCapabilities.title": "AI 能力",
     "aiCapabilities.0.name": "AI 自动解析",
@@ -24,8 +24,8 @@
     "storageManagement.2.detail": "下载流量的额度跟随当前空间的存储额度，每月重置更新",
     "assetOrganization.title": "资产管理",
     "assetOrganization.0.name": "70+ 格式在线预览",
-    "assetOrganization.0.detail": "全面的格式支持，提供即时预览功能，包括：\n- 图片：jpg, jpeg, png, bmp, gif, tiff, webp, heic\n- 设计源文件：eps, svg, psd, psb, ai, cdr, hdr, exr\n- 3D模型：obj, ply, 3ds, gltf, glb, fbx, stl\n- 字体：ttf, otf, ttc\n- 音频：mp3, m4a, wav\n- 视频：mov, flv, mp4, webm, m4v, avi, mkv, mgb, rmv, brm, mpg, ts\n- 表格：et, xls, xlt, xlsx, xlsm, xltx, xltm, csv\n- 文档：txt, doc, docx, dot, dotx, docm, dotm, wps, wpt, rtf, html\n- 演示文档：pdf, ppt, pptx, pptm, key, wps",
-    "assetOrganization.1.name": "四种内容视图",
+    "assetOrganization.0.detail": "全面的格式支持，提供即时预览功能，包括：\n- 图片：jpg, jpeg, png, bmp, gif, tiff, webp, heic, avif, pic, insp\n- 设计源文件：eps, svg, psd, psb, ai, cdr, hdr, exr\n- 3D模型：obj, gltf, glb, fbx, stl, c4d\n- 字体：ttf, otf, ttc\n- 电子书：epub\n- 音频：mp3, m4a, wav\n- 视频：mov, flv, mp4, webm, m4v, avi, mkv, mgb, rmv, brm, mpg, ts, insv\n- 表格：et, xls, xlt, xlsx, xlsm, xltx, xltm, xlsb, csv, ods\n- 文档：txt, doc, docx, dot, dotx, docm, dotm, wps, wpt, rtf, pdf, md, odt, latex, mmd\n- 演示文档：pdf, ppt, pptx, pptm, key, wps\n- 网页：html, url",
+    "assetOrganization.1.name": "五种内容视图",
     "assetOrganization.1.detail": "通过五种视图模式：网格、自适应、瀑布流、列表和看板，提升项目效率，满足工作流需求",
     "assetOrganization.2.name": "高级筛选",
     "assetOrganization.2.detail": "支持按照颜色、视图、格式、标签、大小、尺寸、时长、评分、链接、备注、所有者、创建时间、排序等维度进行高级筛选",
@@ -155,12 +155,12 @@
     "complianceCheck.3.name": "企业自定义词汇过滤",
     "complianceCheck.3.detail": "针对组织特定内容政策的可配置黑白名单",
     "customMetadataFields.title": "元数据自定义字段",
-    "customMetadataFields.0.name": "字段类型配置",
-    "customMetadataFields.0.detail": "支持文本、单选、多选、人员、日期、数字、超链接等多种字段类型",
-    "customMetadataFields.1.name": "多字段类型",
-    "customMetadataFields.1.detail": "支持 350 个自定义字段，满足复杂需求",
+    "customMetadataFields.0.name": "自定义字段配置",
+    "customMetadataFields.0.detail": "在素材库中配置个性化字段类型和内容",
+    "customMetadataFields.1.name": "多种字段类型",
+    "customMetadataFields.1.detail": "支持文本、单选、多选、人员、日期、数字、超链接等多种字段格式",
     "customMetadataFields.2.name": "字段容量",
-    "customMetadataFields.2.detail": "单资产最多支持 350 个自定义字段，满足复杂组织需求",
+    "customMetadataFields.2.detail": "每个系统最多支持 300 个自定义字段，满足复杂组织需求，且且可应用的素材数量无限制",
     "watermark.title": "水印",
     "watermark.0.name": "全站水印系统",
     "watermark.0.detail": "覆盖整个平台的全面水印功能，简单开关控制",
