--- a/src/app/i18n/locales/zh-CN/pricing.json
+++ b/src/app/i18n/locales/zh-CN/pricing.json
@@ -52,7 +52,7 @@
   "pricing.team.pro.des": "适用于中型团队",
   "pricing.team.flagship": "团队旗舰版",
   "pricing.team.flagship.des": "适用于大型团队",
-  "pricing.team.enterprise": "企业版",
+  "pricing.team.enterprise": "商业版",
   "pricing.team.enterprise.des": "适用于较大型企业",
   "pricing.team.enterprise.des.domestic": "适用于较大型企业或教育行业",
   "pricing.team.table.enterprise.des": "更多高阶功能，灵活配置",
@@ -554,8 +554,8 @@
   "pricing.enterpriseSummary.sla": "SLA 服务水平协议",
   "pricing.enterpriseBilling.basic.title": "团队版",
   "pricing.enterpriseBilling.basic.description": "适合小团队",
-  "pricing.enterpriseBilling.advanced.title": "企业版",
+  "pricing.enterpriseBilling.advanced.title": "商业版",
   "pricing.enterpriseBilling.advanced.description": "适用于中大型团队和企业",
-  "pricing.enterpriseBilling.custom.title": "定制版",
+  "pricing.enterpriseBilling.custom.title": "企业版",
   "pricing.enterpriseBilling.custom.description": "专为有特殊要求的大型机构设计"
 }
