feat: update quotation

--- a/src/app/i18n/locales/en-US/pricing-enterprise-features.json
+++ b/src/app/i18n/locales/en-US/pricing-enterprise-features.json
@@ -143,6 +143,37 @@
     "aiAutoTaggingEngine.4.detail": "Generates matching confidence scores to ensure tagging accuracy and reliability",
     "aiAutoTaggingEngine.5.name": "Customized Tag Application",
     "aiAutoTaggingEngine.5.detail": "Distinguished from generic AI intelligent parsing and tagging, specifically designed for precise asset classification based on enterprise-defined tag systems",
+    "museAI.title": "Muse AI",
+    "museAI.block.0": "Design Agent",
+    "museAI.0.detail": "Intelligently coordinates the creative production lifecycle, delivering an enterprise-grade AI design foundation.",
+    "museAI.1.name": "Creative Reasoning",
+    "museAI.1.detail": "Understands user ideas and requirements in depth, automatically charting optimal generation paths for on-target outcomes.",
+    "museAI.2.name": "Smart Prompting",
+    "museAI.2.detail": "Iteratively refines prompts with industry best practices to enhance context comprehension and generation accuracy.",
+    "museAI.3.name": "Interactive Guidance",
+    "museAI.3.detail": "Provides real-time suggestions and workflow cues to help teams collaborate efficiently and make faster decisions.",
+    "museAI.block.1": "Generation Capabilities",
+    "museAI.4.name": "Text-to-Image",
+    "museAI.4.detail": "Transforms textual descriptions into high-quality visual assets across multiple styles and scenarios.",
+    "museAI.5.name": "Image-to-Image",
+    "museAI.5.detail": "Generates new visual variations from existing assets with flexible adjustments to composition, style, and detail.",
+    "museAI.6.name": "Text-to-Video",
+    "museAI.6.detail": "Produces dynamic video content from text scripts for rapid marketing and communication outputs.",
+    "museAI.7.name": "Keyframe Video",
+    "museAI.7.detail": "Generates smooth transition videos by uploading starting and ending keyframes.",
+    "museAI.8.name": "Smart Cutout",
+    "museAI.8.detail": "AI-powered background removal with automatic edge detection and precise subject preservation.",
+    "museAI.block.2": "Canvas Toolkit",
+    "museAI.9.name": "Editable Canvas",
+    "museAI.9.detail": "Generates and edits images within a unified canvas with real-time previews and iterative refinement.",
+    "museAI.10.name": "Custom Frames",
+    "museAI.10.detail": "Supports flexible dimensions and aspect ratios to match diverse channel and distribution requirements.",
+    "museAI.11.name": "Layer Management",
+    "museAI.11.detail": "Enables multi-layer, non-destructive editing with layer locking, ordering, and batch adjustments.",
+    "museAI.12.name": "Design Elements",
+    "museAI.12.detail": "Quickly add patterns, text, and graphics to compose backgrounds and foregrounds with ease.",
+    "museAI.13.name": "Template Support",
+    "museAI.13.detail": "Offers an editable template library with one-click application and deep customization options.",
     "complianceCheck.title": "Compliance Detection",
     "complianceCheck.0.name": "Content Safety Detection",
     "complianceCheck.0.detail": "Automated AI-powered screening for inappropriate adult and explicit material",
