--- a/src/app/i18n/locales/en-US/quotation.json
+++ b/src/app/i18n/locales/en-US/quotation.json
@@ -35,6 +35,7 @@
     "basic.storageSpace.des": "$120/GB/year ($10/GB/month)",
     "basic.aiPoints.hint1": "4,000 points/month",
     "expand.points": " points",
+    "aiPoints.hint": "Permanent AI points package: 100,000 points (≈100M tokens) per package",
     "basic.aiPoints.hint2": "Issued monthly, reset on the 1st of each month",
     "aiPoints.unit": "/point",
     "advanced.memberSeats.hint": "Admin, Contributor, and Member roles configurable",
@@ -97,7 +98,7 @@
     "expansion.storageSpace": "Storage Space",
     "expansion.storageSpace.desc": "Monthly download traffic follows storage size",
     "expansion.aiPoints": "AI Points",
-    "expansion.aiPoints.desc": "Permanent AI points package: 200,000 points (≈200M tokens) per package, valid until consumed; For custom AI tagging, intelligent parsing, AI content creation, etc.",
+    "expansion.aiPoints.desc": "Permanent AI points package: 100,000 points (≈100M tokens) per package, valid until consumed; For custom AI tagging, intelligent parsing, AI content creation, etc.",
     "expansion.downloadData": "Download Data",
     "expansion.downloadData.desc": "Download data package (valid until consumed)",
     "expansion.GA": "Overseas Acceleration Data",
@@ -114,7 +115,9 @@
     "sso.dingtalk": "DingTalk",
     "ai.autoTag.hint": "Basic annual module fee + pay-as-you-go computing power points package model",
     "ai.autoTag.points.hint": "One-time permanent points, flexible top-up when consumed within validity period",
-    "ai.autoTag.points.tag": "200,000 points (≈200M Tokens)",
+    "ai.autoTag.points.tag": "100,000 points",
+    "ai.museAI.points.hint": "One-time permanent points, flexible top-up when consumed within validity period",
+    "ai.museAI.points.tag": "500,000 points (≈500M Tokens)",
     "ga.hint": "Overseas acceleration data package, flexible top-up when consumed within validity period",
     "ga.unit": "/10T/year",
     "sso.unit": "/channel/year",
@@ -122,8 +125,10 @@
     "expand.download.quantity": "( including {{value}})",
     "ai.AutoTagEngine.quantity": "( including {{value}}  AI points )",
     "ai.AutoTagEngine.quantity.perYear": "( including {{value}}  AI points/year)",
-    "ai.AutoTagEngine.des": "Base annual fee ({{prefix}}{{moduleCost}}/year) + Permanent AI points package x {{pointsNum}}\n({{prefix}}{{pointsCost}}); 200,000 points per package (≈200M tokens)",
-    "ai.AutoTagEngine.previewDes": "Base annual fee + Permanent AI points package；\n  200,000 points per package (≈200M tokens)",
+    "ai.AutoTagEngine.des": "Base annual fee ({{prefix}}{{moduleCost}}/year) + Permanent AI points package x {{pointsNum}}\n({{prefix}}{{pointsCost}}); 100,000 points per package (≈200M tokens)",
+    "ai.AutoTagEngine.previewDes": "Base annual fee + Permanent AI points package；\n  100,000 points per package (≈100M tokens)",
+    "ai.museAI.des": "Permanent AI points package x {{pointsNum}}\n({{prefix}}{{pointsCost}}); 500,000 points per package (≈500M tokens)",
+    "ai.museAI.previewDes": "Permanent AI points package；\n  500,000 points per package (≈500M tokens)",
     "discount.settings": "Discount Settings",
     "discount.input.label": "Please enter discount value",
     "discount.input.hint": "Minimum discount cannot be less than 20% OFF",
