--- a/src/app/i18n/locales/zh-CN/pricing-enterprise-features.json
+++ b/src/app/i18n/locales/zh-CN/pricing-enterprise-features.json
@@ -145,6 +145,37 @@
     "aiAutoTaggingEngine.4.detail": "生成匹配置信度分数，确保打标准确性和可靠性",
     "aiAutoTaggingEngine.5.name": "定制化标签应用",
     "aiAutoTaggingEngine.5.detail": "区别于通用 AI 智能解析和打标，专门根据企业自定义标签体系进行精准分类标注",
+    "museAI.title": "Muse AI",
+    "museAI.block.0": "设计 Agent",
+    "museAI.0.detail": "智能统筹创意生产流程，为企业提供端到端的 AI 设计能力基座",
+    "museAI.1.name": "创意推理",
+    "museAI.1.detail": "智能解读用户想法和需求，优化生成效果",
+    "museAI.2.name": "智能提示优化",
+    "museAI.2.detail": "基于最佳实践自动优化输入内容，确保最优结果",
+    "museAI.3.name": "交互式指导",
+    "museAI.3.detail": "在创作流程中提供实时建议",
+    "museAI.block.1": "生成能力",
+    "museAI.4.name": "文生图",
+    "museAI.4.detail": "将文字描述转化为高质量视觉内容",
+    "museAI.5.name": "图生图",
+    "museAI.5.detail": "基于新的创意方向修改现有图片",
+    "museAI.6.name": "文生视频",
+    "museAI.6.detail": "从文字提示生成动态视频内容",
+    "museAI.7.name": "关键帧视频",
+    "museAI.7.detail": "通过上传首尾帧图片创建视频",
+    "museAI.8.name": "智能抠图",
+    "museAI.8.detail": "AI 驱动的背景移除，自动边缘检测",
+    "museAI.block.2": "画布工具",
+    "museAI.9.name": "可编辑画布",
+    "museAI.9.detail": "直接在工作区内生成和编辑图片",
+    "museAI.10.name": "自定义画框",
+    "museAI.10.detail": "支持灵活的尺寸和宽高比",
+    "museAI.11.name": "图层管理",
+    "museAI.11.detail": "多图层系统支持复杂构图和无损编辑",
+    "museAI.12.name": "设计元素",
+    "museAI.12.detail": "添加图案、文字、图形，自定义背景",
+    "museAI.13.name": "模板支持",
+    "museAI.13.detail": "在画布内无缝应用和修改模板",
     "complianceCheck.title": "合规检测",
     "complianceCheck.0.name": "内容安全检测",
     "complianceCheck.0.detail": "AI 驱动的成人和露骨内容自动筛查",
