fix: quotation bug

--- a/src/app/i18n/locales/en-US/quotation.json
+++ b/src/app/i18n/locales/en-US/quotation.json
@@ -35,7 +35,7 @@
     "basic.storageSpace.des": "$120/GB/year ($10/GB/month)",
     "basic.aiPoints.hint1": "4,000 points/month",
     "expand.points": " points",
-    "aiPoints.hint": "Permanent AI points package: 100,000 points (≈100M tokens) per package",
+    "aiPoints.hint": "Permanent AI points package: 100,000 points per package",
     "basic.aiPoints.hint2": "Issued monthly, reset on the 1st of each month",
     "aiPoints.unit": "/point",
     "advanced.memberSeats.hint": "Admin, Contributor, and Member roles configurable",
@@ -85,6 +85,7 @@
     "customer.information": "Customer Information",
     "service.provider": "Service Provider",
     "service.provider.name": "Tezign (Shanghai) Information & Technology Co., Ltd.",
+    "service.provider.name.global": "Muse AI  (Singapore) Pte. Ltd.",
     "service.provider.yourName": "Contact: Account Manager",
     "service.terms": "Service Terms",
     "service.terms.1": "1. This quote is valid for 30 days.",
@@ -98,7 +99,7 @@
     "expansion.storageSpace": "Storage Space",
     "expansion.storageSpace.desc": "Monthly download traffic follows storage size",
     "expansion.aiPoints": "AI Points",
-    "expansion.aiPoints.desc": "Permanent AI points package: 100,000 points (≈100M tokens) per package, valid until consumed; For custom AI tagging, intelligent parsing, AI content creation, etc.",
+    "expansion.aiPoints.desc": "Permanent AI points package: 100,000 points per package, valid until consumed; For custom AI tagging, intelligent parsing, AI content creation, etc.",
     "expansion.downloadData": "Download Data",
     "expansion.downloadData.desc": "Download data package (valid until consumed)",
     "expansion.GA": "Overseas Acceleration Data",
@@ -117,18 +118,19 @@
     "ai.autoTag.points.hint": "One-time permanent points, flexible top-up when consumed within validity period",
     "ai.autoTag.points.tag": "100,000 points",
     "ai.museAI.points.hint": "One-time permanent points, flexible top-up when consumed within validity period",
-    "ai.museAI.points.tag": "500,000 points (≈500M Tokens)",
+    "ai.museAI.points.tag": "500,000 points",
     "ga.hint": "Overseas acceleration data package, flexible top-up when consumed within validity period",
     "ga.unit": "/10T/year",
     "sso.unit": "/channel/year",
-    "ai.AutoTagEngine.unit": "copy",
-    "expand.download.quantity": "( including {{value}})",
-    "ai.AutoTagEngine.quantity": "( including {{value}}  AI points )",
-    "ai.AutoTagEngine.quantity.perYear": "( including {{value}}  AI points/year)",
-    "ai.AutoTagEngine.des": "Base annual fee ({{prefix}}{{moduleCost}}/year) + Permanent AI points package x {{pointsNum}}\n({{prefix}}{{pointsCost}}); 100,000 points per package (≈200M tokens)",
-    "ai.AutoTagEngine.previewDes": "Base annual fee + Permanent AI points package；\n  100,000 points per package (≈100M tokens)",
-    "ai.museAI.des": "Permanent AI points package x {{pointsNum}}\n({{prefix}}{{pointsCost}}); 500,000 points per package (≈500M tokens)",
-    "ai.museAI.previewDes": "Permanent AI points package；\n  500,000 points per package (≈500M tokens)",
+    "ai.AutoTagEngine.unit": "package",
+    "ai.AutoTagEngine.unit.s": "s",
+    "expand.download.quantity": "\n(including {{value}})",
+    "ai.AutoTagEngine.quantity": "\n(including {{value}}  AI points )",
+    "ai.AutoTagEngine.quantity.perYear": "\n(including {{value}}  AI points/year)",
+    "ai.AutoTagEngine.des": "Base annual fee ({{prefix}}{{moduleCost}}/year) + Permanent AI points package x {{pointsNum}}\n({{prefix}}{{pointsCost}}); 100,000 points per package",
+    "ai.AutoTagEngine.previewDes": "Base annual fee + Permanent AI points package；\n  100,000 points per package",
+    "ai.museAI.des": "Permanent AI points package x {{pointsNum}}\n({{prefix}}{{pointsCost}}); 500,000 points per package",
+    "ai.museAI.previewDes": "Permanent AI points package；\n  500,000 points per package",
     "discount.settings": "Discount Settings",
     "discount.input.label": "Please enter discount value",
     "discount.input.hint": "Minimum discount cannot be less than 20% OFF",
