--- a/src/app/i18n/locales/zh-CN/quotation.json
+++ b/src/app/i18n/locales/zh-CN/quotation.json
@@ -33,7 +33,7 @@
     "memberSeats.perMonth": "/席/月",
     "basic.storageSpace.hint": "每月下载流量跟随存储容量",
     "basic.storageSpace.des": "￥5,000/TB/年（￥418/TB/月）",
-    "aiPoints.hint": "一次性永久 AI 点数包 10 万点 (≈1亿 Token) /份",
+    "aiPoints.hint": "一次性永久 AI 点数包 10 万点/份",
     "basic.aiPoints.hint1": "4,000点/月",
     "basic.aiPoints.hint2": "每月重置并发放",
     "aiPoints.unit": "/点",
@@ -86,6 +86,7 @@
     "customer.information": "客户信息",
     "service.provider": "服务提供商",
     "service.provider.name": "特赞（上海）信息科技有限公司",
+    "service.provider.name.global": "Muse AI  (Singapore) Pte. Ltd.",
     "service.terms": "服务条款",
     "service.terms.1": "1. 本报价单有效期为 30 天。",
     "service.terms.2": "2. 服务期限自合同签署并确认付款后开始，有效期一年。",
@@ -98,7 +99,7 @@
     "expansion.storageSpace": "存储空间",
     "expansion.storageSpace.desc": "每月下载流量跟随存储容量",
     "expansion.aiPoints": "AI 点数",
-    "expansion.aiPoints.desc": "一次性永久 AI 点数包 10 万点 (≈1亿 Token) /份，有效期消耗完为止；AI 点数可用于自定义 AI 标签、智能解析和 AI 内容创作等",
+    "expansion.aiPoints.desc": "一次性永久 AI 点数包 10 万点/份，有效期消耗完为止；AI 点数可用于自定义 AI 标签、智能解析和 AI 内容创作等",
     "expansion.downloadData": "下载流量",
     "expansion.downloadData.desc": "下载流量包 1TB/份（有效期至消耗完为止）",
     "expansion.GA": "海外加速流量",
@@ -117,18 +118,19 @@
     "ai.autoTag.points.hint": "一次性永久点数，有效期内消耗完毕可灵活增购",
     "ai.autoTag.points.tag": "10万点",
     "ai.museAI.points.hint": "一次性永久点数，有效期内消耗完毕可灵活增购",
-    "ai.museAI.points.tag": "50万点 (≈5亿 Tokens)",
+    "ai.museAI.points.tag": "50万点",
     "ga.hint": "海外加速流量包，有效期内消耗完毕可灵活增购",
     "ga.unit": "/10T/年",
     "sso.unit": "/渠道/年",
     "ai.AutoTagEngine.unit": "份",
-    "ai.AutoTagEngine.quantity": "（含 {{value}}万点）",
-    "ai.AutoTagEngine.quantity.perYear": "（含 {{value}}万点/年）",
-    "expand.download.quantity": "（含 {{value}}）",
-    "ai.AutoTagEngine.des": "基础年度模块费 ({{prefix}}{{moduleCost}}/年) + 永久点数包 x {{pointsNum}} ({{prefix}} {{pointsCost}})；\n AI 算力点数包每份为 10万点 (≈1亿 Tokens)",
-    "ai.AutoTagEngine.previewDes": "基础年度模块费 + 永久点数包；\n AI 算力点数包每份为 10万点 (≈1亿 Tokens)",
-    "ai.museAI.des": "永久点数包 x {{pointsNum}} ({{prefix}} {{pointsCost}})；50万点 (≈5亿 Tokens)",
-    "ai.museAI.previewDes": "永久点数包；\n AI 算力点数包每份为 50万点 (≈5亿 Tokens)",
+    "ai.AutoTagEngine.unit.s": "",
+    "ai.AutoTagEngine.quantity": "\n（含 {{value}}万点）",
+    "ai.AutoTagEngine.quantity.perYear": "\n（含 {{value}}万点/年）",
+    "expand.download.quantity": "\n（含 {{value}}）",
+    "ai.AutoTagEngine.des": "基础年度模块费 ({{prefix}}{{moduleCost}}/年) + 永久点数包 x {{pointsNum}} ({{prefix}} {{pointsCost}})；\n AI 算力点数包每份为 10万点",
+    "ai.AutoTagEngine.previewDes": "基础年度模块费 + 永久点数包；\n AI 算力点数包每份为 10万点",
+    "ai.museAI.des": "永久点数包 x {{pointsNum}} ({{prefix}} {{pointsCost}})；50万点",
+    "ai.museAI.previewDes": "永久点数包；\n AI 算力点数包每份为 50万点",
     "discount.settings": "优惠设置",
     "discount.input.label": "请输入折扣数值",
     "discount.input.hint": "最低折扣不得低于 8 折",
