feat: add modal no.

--- a/src/app/i18n/locales/en-US/footer.json
+++ b/src/app/i18n/locales/en-US/footer.json
@@ -48,5 +48,6 @@
   "shanghaiIcpNo1502142": "Shanghai ICP No. 15021426-22",
   "shanghaiPublicNetwork": "Shanghai Public Network Security No. 31010402010164",
   "networkInformationAc": "Network Information Account No. 310115402810501240017",
-  "networkInformationAc2": "Network Information Account No. 310115402810501240033"
+  "networkInformationAc2": "Network Information Account No. 310115402810501240033",
+  "networkInformationAc3": "Model Record Number: Shanghai-TezignCreativeReasoning-202510170089"
 }
