--- a/src/app/i18n/locales/zh-CN/footer.json
+++ b/src/app/i18n/locales/zh-CN/footer.json
@@ -48,5 +48,6 @@
   "shanghaiIcpNo1502142": "沪ICP备15021426号-22",
   "shanghaiPublicNetwork": "沪公网安备 31010402010164 号",
   "networkInformationAc": "网信算备 310115402810501240017 号",
-  "networkInformationAc2": "网信算备 310115402810501240033 号"
+  "networkInformationAc2": "网信算备 310115402810501240033 号",
+  "networkInformationAc3": "模型备案号: Shanghai-TezignCreativeReasoning-202510170089"
 }
