feat: add Enterprise Modules

--- a/src/app/i18n/locales/en-US/pricing-enterprise-features.json
+++ b/src/app/i18n/locales/en-US/pricing-enterprise-features.json
@@ -174,6 +174,24 @@
     "museAI.12.detail": "Quickly add patterns, text, and graphics to compose backgrounds and foregrounds with ease.",
     "museAI.13.name": "Template Support",
     "museAI.13.detail": "Offers an editable template library with one-click application and deep customization options.",
+    "batchTemplating.title": "Batch Templating",
+    "batchTemplating.0.name": "Brand Consistency at Scale",
+    "batchTemplating.0.detail": "Apply brand-approved templates across multiple assets simultaneously to ensure design uniformity",
+    "batchTemplating.1.name": "Smart Content Replacement",
+    "batchTemplating.1.detail": "Automatically swap images, graphics, design elements, and colors while preserving layout integrity and design quality",
+    "batchTemplating.2.name": "Dynamic Content Mapping",
+    "batchTemplating.2.detail": "Map variable content (text, images, data, colors) to template placeholders for personalized, on-brand outputs",
+    "batchTemplating.3.name": "Flexible Data Import",
+    "batchTemplating.3.detail": "Batch select product assets directly from the library or import variable data via CSV for rapid large-scale content configuration",
+    "batchTemplating.4.name": "AI Translation and Bulk Production",
+    "batchTemplating.4.detail": "Translate text content into 17 languages with one click and generate hundreds of multilingual branded assets in a single operation",
+    "museCut.title": "MuseCut",
+    "museCut.0.name": "Video Segmentation",
+    "museCut.0.detail": "Automatically detect scene changes, key moments, and highlights to intelligently segment raw footage into clips",
+    "museCut.1.name": "AI Script Creation",
+    "museCut.1.detail": "Generate contextually relevant scripts based on your requirements and video content, with automatic clip-to-script mapping",
+    "museCut.2.name": "One-Click Video Assembly",
+    "museCut.2.detail": "Automatically arrange clips, add transitions, match background music, and generate subtitles to create finished videos instantly",
     "complianceCheck.title": "Compliance Detection",
     "complianceCheck.0.name": "Content Safety Detection",
     "complianceCheck.0.detail": "Automated AI-powered screening for inappropriate adult and explicit material",
@@ -183,6 +201,37 @@
     "complianceCheck.2.detail": "Detection of prohibited words and restricted language based on regional compliance requirements",
     "complianceCheck.3.name": "Enterprise Custom Word Filtering",
     "complianceCheck.3.detail": "Configurable blacklist and whitelist for organization-specific content policies",
+    "deliveryApprovalCenter.title": "Deliverable Approval Center",
+    "deliveryApprovalCenter.0.name": "Flexible Approval Workflow Configuration",
+    "deliveryApprovalCenter.0.detail": "Configure custom approval workflows to meet diverse approval requirements across different teams and projects",
+    "deliveryApprovalCenter.1.name": "Bulk Deliverable Management",
+    "deliveryApprovalCenter.1.detail": "Enable internal creative teams or external vendors to batch upload deliverables and submit for approval, enhancing collaboration efficiency",
+    "deliveryApprovalCenter.2.name": "Visual Approval Feedback",
+    "deliveryApprovalCenter.2.detail": "Annotate and comment directly on assets with markup tools to provide clear, precise feedback and revision suggestions",
+    "deliveryApprovalCenter.3.name": "Version Control and History",
+    "deliveryApprovalCenter.3.detail": "Support approval or rejection with the ability for creative teams to submit new versions for re-approval, maintaining a complete revision history",
+    "deliveryApprovalCenter.4.name": "SLA and Deadline Management",
+    "deliveryApprovalCenter.4.detail": "Set delivery and approval deadlines with automatic escalation to designated approvers for overdue tasks, ensuring on-time project completion",
+    "deliveryApprovalCenter.5.name": "Automated Asset Archiving",
+    "deliveryApprovalCenter.5.detail": "Automatically file approved deliverables to designated folders, enabling seamless transition from approval to archival",
+    "publicAssetsAndDerivatives.title": "Public Assets & Derivatives",
+    "publicAssetsAndDerivatives.0.name": "Original File Public Permission Control",
+    "publicAssetsAndDerivatives.0.detail": "Folder-level permission settings enable administrators to control public access to original files at the source, ensuring sensitive content is not inadvertently exposed",
+    "publicAssetsAndDerivatives.1.name": "Automated Derivative Configuration",
+    "publicAssetsAndDerivatives.1.detail": "Configure multiple derivative rules (format, dimensions, quality) in the backend to automatically adapt to different channel requirements, with independent public access permissions and API integration capabilities for each rule, enabling upload once and deploy everywhere",
+    "publicAssetsAndDerivatives.2.name": "Flexible Display Control",
+    "publicAssetsAndDerivatives.2.detail": "Configure whether derivatives and their public links are displayed on asset detail pages to meet different business visibility requirements",
+    "publicAssetsAndDerivatives.3.name": "Batch Link Export",
+    "publicAssetsAndDerivatives.3.detail": "Batch select assets and export public links for original files and derivatives to CSV in one click, streamlining workflows for e-commerce product listing and similar scenarios",
+    "copyrightManagement.title": "Rights Management",
+    "copyrightManagement.0.name": "Rights Agreement Management",
+    "copyrightManagement.0.detail": "Dedicated rights management module supporting the creation of rights agreements, uploading of agreement attachments, configuring multi-dimensional usage rights (region, channel, time period), and linking assets from the library for centralized management",
+    "copyrightManagement.1.name": "Asset Usage Rights Control",
+    "copyrightManagement.1.detail": "Upload and manage rights information with flexible configuration of usage restrictions by region, channel, and time period to ensure compliant asset usage",
+    "copyrightManagement.2.name": "Geographic and Channel Restrictions",
+    "copyrightManagement.2.detail": "Precisely define specific countries/regions and distribution channels where assets can be used, enabling granular permission control",
+    "copyrightManagement.3.name": "Usage Period Management",
+    "copyrightManagement.3.detail": "Set time-limited usage permissions with automatic expiration tracking; expired assets are automatically restricted from access (including sharing, downloading, and other operations)",
     "customMetadataFields.title": "Custom Metadata Fields",
     "customMetadataFields.0.name": "Custom Field Configuration",
     "customMetadataFields.0.detail": "Configure personalized field types and content within the asset library",
