--- a/src/app/i18n/locales/en-US/quotation.json
+++ b/src/app/i18n/locales/en-US/quotation.json
@@ -66,6 +66,10 @@
     "module.standardProjectHub": "Standard Project Hub",
     "module.advancedProjectHub": "Advanced Project Hub",
     "module.complianceCheck": "Compliance Check",
+    "module.batchTemplating": "Batch Templating",
+    "module.deliveryApprovalCenter": "Deliverable Approval Center",
+    "module.publicAssetsAndDerivatives": "Public Assets & Derivatives",
+    "module.copyrightManagement": "Rights Management",
     "module.customMetadataFields": "Custom Metadata Fields",
     "module.watermark": "Watermark",
     "module.enterpriseSSO": "Enterprise Single Sign-On",
@@ -119,6 +123,7 @@
     "ai.autoTag.points.tag": "100,000 points",
     "ai.museAI.points.hint": "One-time permanent points, flexible top-up when consumed within validity period",
     "ai.museAI.points.tag": "500,000 points",
+    "ai.museCut.points.hint": "One-time permanent points, flexible top-up when consumed within validity period",
     "ga.hint": "Overseas acceleration data package, flexible top-up when consumed within validity period",
     "ga.unit": "/10T/year",
     "sso.unit": "/channel/year",
@@ -131,6 +136,8 @@
     "ai.AutoTagEngine.previewDes": "Base annual fee + Permanent AI points package；\n  100,000 points per package",
     "ai.museAI.des": "Permanent AI points package x {{pointsNum}}\n({{prefix}}{{pointsCost}}); 500,000 points per package",
     "ai.museAI.previewDes": "Permanent AI points package；\n  500,000 points per package",
+    "ai.museCut.des": "Permanent AI points package x {{pointsNum}}\n({{prefix}}{{pointsCost}}); 500,000 points per package",
+    "ai.museCut.previewDes": "Permanent AI points package；\n  500,000 points per package",
     "discount.settings": "Discount Settings",
     "discount.input.label": "Please enter discount value",
     "discount.input.hint": "Minimum discount cannot be less than 20% OFF",
