--- a/src/app/i18n/locales/zh-CN/pricing-enterprise-features.json
+++ b/src/app/i18n/locales/zh-CN/pricing-enterprise-features.json
@@ -176,6 +176,24 @@
     "museAI.12.detail": "添加图案、文字、图形，自定义背景",
     "museAI.13.name": "模板支持",
     "museAI.13.detail": "在画布内无缝应用和修改模板",
+    "batchTemplating.title": "批量套版",
+    "batchTemplating.0.name": "规模化品牌一致性",
+    "batchTemplating.0.detail": "一次性将品牌认证模板应用于多个资产，确保设计统一性",
+    "batchTemplating.1.name": "智能内容替换",
+    "batchTemplating.1.detail": "自动替换图片、图形、设计元素及颜色，同时保持布局完整性和设计品质",
+    "batchTemplating.2.name": "动态内容映射",
+    "batchTemplating.2.detail": "将可变内容（文字、图片、数据、颜色）映射至模板占位符，生成个性化的品牌化输出",
+    "batchTemplating.3.name": "灵活数据导入",
+    "batchTemplating.3.detail": "支持从资产库批量选择商品素材，或通过CSV表格导入可变数据，快速完成大规模内容配置",
+    "batchTemplating.4.name": "AI智能翻译与批量生产",
+    "batchTemplating.4.detail": "一键将文字内容批量翻译为17种语言，单次操作即可生成数百个多语言品牌资产",
+    "museCut.title": "MuseCut",
+    "museCut.0.name": "智能拆条分析",
+    "museCut.0.detail": "对原始视频素材进行AI智能分析，自动识别场景切换、情绪高潮、关键镜头等内容节点，实现精准切片拆条",
+    "museCut.1.name": "智能脚本创作",
+    "museCut.1.detail": "基于用户需求及视频切片内容,智能生成贴合场景的脚本文案，并自动建立脚本与片段的映射关系",
+    "museCut.2.name": "一键智能成片",
+    "museCut.2.detail": "根据用户需求、视频切片及脚本,AI自动完成片段编排、转场、节奏控制，并智能匹配背景音乐、生成精准字幕",
     "complianceCheck.title": "合规检测",
     "complianceCheck.0.name": "内容安全检测",
     "complianceCheck.0.detail": "AI 驱动的成人和露骨内容自动筛查",
@@ -185,6 +203,37 @@
     "complianceCheck.2.detail": "基于地区合规要求检测禁用词汇和受限语言",
     "complianceCheck.3.name": "企业自定义词汇过滤",
     "complianceCheck.3.detail": "针对组织特定内容政策的可配置黑白名单",
+    "deliveryApprovalCenter.title": "交付审批中心",
+    "deliveryApprovalCenter.0.name": "灵活审批流程配置",
+    "deliveryApprovalCenter.0.detail": "支持自定义审批工作流，满足不同团队和项目的审批需求",
+    "deliveryApprovalCenter.1.name": "批量交付物管理",
+    "deliveryApprovalCenter.1.detail": "支持内部创意团队或外部供应商批量上传交付物并提交审批，提升协作效率",
+    "deliveryApprovalCenter.2.name": "可视化审批反馈",
+    "deliveryApprovalCenter.2.detail": "支持圈选标注评论功能，直观准确地给出审批意见和修改建议",
+    "deliveryApprovalCenter.3.name": "版本迭代追溯",
+    "deliveryApprovalCenter.3.detail": "支持审批通过或拒绝，创意团队可提交新版本再次审批，完整记录修改历程",
+    "deliveryApprovalCenter.4.name": "SLA时效管控",
+    "deliveryApprovalCenter.4.detail": "支持设置交付截止和审批截止时间，超时任务自动转交指定审批人，确保项目按时完成",
+    "deliveryApprovalCenter.5.name": "自动资产入库",
+    "deliveryApprovalCenter.5.detail": "审批通过的交付物可自动归档至指定文件夹，实现审批到归档的无缝衔接",
+    "publicAssetsAndDerivatives.title": "公开资产与衍生版本",
+    "publicAssetsAndDerivatives.0.name": "原文件公开权限管控",
+    "publicAssetsAndDerivatives.0.detail": "文件夹级权限设置，管理员从源头控制原文件的对外开放范围，确保敏感内容不被意外公开",
+    "publicAssetsAndDerivatives.1.name": "衍生版本自动化配置",
+    "publicAssetsAndDerivatives.1.detail": "后台可预设多种衍生规则（格式、尺寸、质量），自动适配不同渠道需求，并可为每条规则独立配置公开访问权限和 API 集成能力，实现一次上传、多端适配",
+    "publicAssetsAndDerivatives.2.name": "灵活展示控制",
+    "publicAssetsAndDerivatives.2.detail": "支持设置衍生版本及其公开链接是否在资产详情页展示，满足不同业务场景的可见性需求",
+    "publicAssetsAndDerivatives.3.name": "批量链接导出",
+    "publicAssetsAndDerivatives.3.detail": "支持批量选择资产，一键导出原始文件及各衍生版本的公开链接至 CSV 文件，提升电商上品等场景的操作效率",
+    "copyrightManagement.title": "版权管理",
+    "copyrightManagement.0.name": "版权协议管理",
+    "copyrightManagement.0.detail": "提供专门的版权管理模块，支持创建版权协议、上传协议附件、设置多个多维度授权范围（地区、渠道、授权时间），并关联素材库中的素材进行统一管理",
+    "copyrightManagement.1.name": "资产授权控制",
+    "copyrightManagement.1.detail": "支持上传并管理版权信息，灵活设置区域、渠道和时间段的使用限制，确保资产合规使用",
+    "copyrightManagement.2.name": "地域与渠道限制",
+    "copyrightManagement.2.detail": "精准定义资产可使用的特定国家/地区和分发渠道，实现细粒度的权限控制",
+    "copyrightManagement.3.name": "使用期限管理",
+    "copyrightManagement.3.detail": "支持设置时间限制的使用权限并自动追踪到期情况，到期后素材将自动禁止取用（包括分享、下载等操作）",
     "customMetadataFields.title": "元数据自定义字段",
     "customMetadataFields.0.name": "自定义字段配置",
     "customMetadataFields.0.detail": "在素材库中配置个性化字段类型和内容",
