--- a/src/app/i18n/locales/zh-CN/quotation.json
+++ b/src/app/i18n/locales/zh-CN/quotation.json
@@ -72,6 +72,10 @@
     "module.standardProjectHub": "标准项目库",
     "module.advancedProjectHub": "高级项目库",
     "module.complianceCheck": "合规检测",
+    "module.batchTemplating": "批量套版",
+    "module.deliveryApprovalCenter": "交付审批中心",
+    "module.publicAssetsAndDerivatives": "公开资产与衍生版本",
+    "module.copyrightManagement": "版权管理",
     "module.customMetadataFields": "元数据自定义字段",
     "module.watermark": "水印",
     "module.enterpriseSSO": "企业 SSO 登录",
@@ -119,6 +123,7 @@
     "ai.autoTag.points.tag": "10万点",
     "ai.museAI.points.hint": "一次性永久点数，有效期内消耗完毕可灵活增购",
     "ai.museAI.points.tag": "50万点",
+    "ai.museCut.points.hint": "一次性永久点数，有效期内消耗完毕可灵活增购",
     "ga.hint": "海外加速流量包，有效期内消耗完毕可灵活增购",
     "ga.unit": "/10T/年",
     "sso.unit": "/渠道/年",
@@ -131,6 +136,8 @@
     "ai.AutoTagEngine.previewDes": "基础年度模块费 + 永久点数包；\n AI 算力点数包每份为 10万点",
     "ai.museAI.des": "永久点数包 x {{pointsNum}} ({{prefix}} {{pointsCost}})；50万点",
     "ai.museAI.previewDes": "永久点数包；\n AI 算力点数包每份为 50万点",
+    "ai.museCut.des": "永久点数包 x {{pointsNum}} ({{prefix}} {{pointsCost}})；50万点",
+    "ai.museCut.previewDes": "永久点数包；\n AI 算力点数包每份为 50万点",
     "discount.settings": "优惠设置",
     "discount.input.label": "请输入折扣数值",
     "discount.input.hint": "最低折扣不得低于 8 折",
